# practicum_Cpp_developer

Basic_Algorithms/: task1.cc
Basic_Algorithms/accumulate/: Task1.cc
Basic_Algorithms/count_and_count_if/: Readme.md  Task1.cc
Basic_Algorithms/sort_and_reverse/: Readme.md  Task2.cc
Basic_Algorithms/Встроенные_алгоритмы/: main.cpp  readme.md
Basic_Algorithms/Параллельные_алгоритмы/: main.cpp
Basic_Algorithms/Ранжирование_по_релевантности/: readme.md
sprint0_free/Basic_Algorithms/accumulate/: readme.md
sprint0_free/Basic_Algorithms/count_and_count_if/: Task2.cc
sprint0_free/Basic_Algorithms/sort_and_reverse/: Task1.cc  Task2.cc
sprint0_free/Basic_Algorithms/Ранжирование_по_релевантности/: task1.cc
sprint0_free/Итоговые_проект/Учёт_минус-слов/: readme.md
sprint0_free/Лямбда_функции/Захват_переменных_по_ссылке/: readme.md
sprint1/Видимость_и_инициализация_переменных/: readme.md
sprint1/Двойное_двоеточие/: main.cc  readme.md
sprint1/Ограниченность_памяти_и_переполнение/: main.cc  readme.md
sprint1/Пары_и_кортежи/: readme.md
sprint1/Перечислимые_типы/: readme.md
sprint1/Средний_рейтинг/: main.cc  readme.md
sprint1/Техника_безопасности/: main.cc
sprint2/Компиляция_и_отладка_в_консоли/: readme.md
sprint3/Перегрузка_операторов/: readme.md
sprint4/Распределение_кода_по_файлам/Шаблоны_в_многофайловых_проектах/Task1/: CMakeLists.txt  search_server.cpp  search_server.h
sprint5/Профилируем_и_ускоряем/Два_важных_правила_оптимизации/Task1/: CMakeLists.txt  log_duration.h  main.cpp  profiling.cpp  search_server.h
sprint8/Состояние_гонки_и_защита_от_него/Параллелим_поиск_документов/Task/: CMakeLists.txt  concurrent_map.h  document.h  main.cpp  profiling.h  search_server.cpp  search_server.h
Лямбда_функции/: readme.md  task1.cc  task2.cc
Лямбда_функции/Захват_переменных_по_значению/: main.cpp  readme.md
Лямбда_функции/Захват_переменных_по_ссылке/: readme.md
Структуры_и_классы/Зачем_нужны_классы/: main.cpp  readme.md
Структуры_и_классы/Константные_методы/: main.cpp
Структуры_и_классы/Методы_классов/: main.cpp
Структуры_и_классы/Сортировка_вектора_структур/: readme.md  task1.cc  task2.cc
Структуры_и_классы/Стурктуры/: main.cpp  readme.md
(+386 files in other folders)
